# mcserver-cli

./: .gitignore  Cargo.toml  README.md  build.rs  config_template.toml
src/: cli.rs  config.rs  config_defs.rs  error.rs  lib.rs  main.rs  platforms.rs  rcon.rs  reinstaller.rs  server.rs  session.rs
