[package]
name = "mcserver"
version = "0.1.7"
edition = "2024"
description = "A command line interface tool which simplifies minecraft server management with zellij and mcrcon"
license = "MIT"
repository = "https://github.com/Finnian-Walsh/mcserver-cli.git"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
url = "2.5.7"
serde = "1.0.219"
toml = "0.9.5"
shellexpand = "3.1.1"
color-eyre = { version = "0.6.5", optional = true }
thiserror = "2.0.16"
serde_json = "1.0.145"

[build-dependencies]
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
shellexpand = "3.1.1"
proc-macro2 = "1.0.101"
anyhow = "1.0.100"

[features]
default = ["color-eyre"]
build-logging = []
minimal = []
